--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   }
 }
 </script>
-<link rel="stylesheet" href="./index.css">
+<link rel="stylesheet" href="/index.css">
 </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
